<resources>
    <string name="app_name">Swoosh3</string>
    <string name="app_logo">app_logo</string>
    <string name="league_background">league_background</string>
    <string name="co_ed">Co-ed</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="next">Next</string>
    <string name="desired_league">Desired league:</string>
    <string name="welcome_background">welcome background</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league
    </string>
    <string name="get_started">GET STARTED</string>
    <string name="background_image">background_image</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a beginner co-ed league near you...</string>


</resources>
